
  * Pass NASM only on supported archs
    - debian/config/mozconfig.in
  * Reduce the LTO level (to "thin") on arm64 to work around OOM failures on
    Launchpad builders
    - debian/build/rules.mk
    - debian/patches/armhf-rustc-thin-lto.patch
  * Update patches
    - debian/patches/armhf-do-not-build-qcms-with-neon.patch
    - debian/patches/armhf-reduce-linker-memory-use.patch
  * Update cbindgen to 0.19.0
    - debian/build/create-tarball.py

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Mon, 22 Mar 2021 19:36:32 +0100

firefox-trunk (88.0~a1~hg20210321r572308-0ubuntu1) hirsute; urgency=medium

  * Use clang 12 if available
    - debian/control{,.in}
    - debian/build/rules.mk
  * Update cbindgen to 0.18.0
    - debian/build/create-tarball.py
  * Reduce the LTO level (to "thin") on i386 to work around OOM failures on
    Launchpad builders
    - debian/build/rules.mk
    - debian/patches/armhf-rustc-thin-lto.patch
  * Update patches
    - debian/patches/rust-drop-dll-checksums.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Mon, 22 Mar 2021 07:57:39 +0100

firefox-trunk (87.0~a1~hg20210221r568163-0ubuntu1) hirsute; urgency=emergency

  [ Rico Tzschichholz ]
  * Vendor dump_syms v0.0.7 and its dependencies in the source tarball
    - debian/build/create-tarball.py
    - debian/build/rules.mk
    - debian/config/mozconfig.in
    - debian/config/tarball.conf
  * Build-dep on libssl-dev as dump_syms dependency
    - debian/control{,.in}
  * Let cbindgen and dump_syms use clang where needed
    - debian/build/rules.mk
  * Update cbindgen to 0.17.0
    - debian/build/create-tarball.py
  * Add Silesian language pack
    - update debian/config/locales.all
    - update debian/config/locales.shipped
    - update debian/control
  * Drop upstreamed patches
    - debian/patches/s390x-fix-hidden-symbol.patch
  * Update patches
    - debian/patches/armhf-reduce-linker-memory-use.patch

  [ Olivier Tilloy ]