@@ -1,9 +1,9 @@
 --- a/build/moz.configure/rust.configure
 +++ b/build/moz.configure/rust.configure
 @@ -168,7 +168,7 @@
-         rustc_min_version = Version("1.47.0")
-     else:
-         rustc_min_version = Version(MINIMUM_RUST_VERSION)
+             )
+         )
+     rustc_min_version = Version(MINIMUM_RUST_VERSION)
 -    cargo_min_version = rustc_min_version
 +    cargo_min_version = Version("1.46.0")
  
